[gd_scene load_steps=11 format=3 uid="uid://d4a6dnr38oeww"]

[ext_resource type="Script" path="res://scenes/game.gd" id="1_b061w"]
[ext_resource type="Theme" uid="uid://cj1iapyna1iri" path="res://global_theme.tres" id="2_ik13t"]
[ext_resource type="Texture2D" uid="uid://8ctlbb6hb1xb" path="res://art/fish/fishTile_077.png" id="3_5ke58"]
[ext_resource type="Texture2D" uid="uid://dk3nxjy637274" path="res://art/fish/fishTile_073.png" id="4_ej5ge"]
[ext_resource type="Texture2D" uid="uid://c107v764dilj7" path="res://art/fish/fishTile_079.png" id="5_plp7y"]
[ext_resource type="Texture2D" uid="uid://ck3eiy42hmijo" path="res://art/fish/fishTile_081.png" id="6_4bh6k"]
[ext_resource type="Texture2D" uid="uid://yfth5cyoosxw" path="res://art/fish/fishTile_075.png" id="7_5r0tr"]
[ext_resource type="AudioStream" uid="uid://cpf6o3f81e68y" path="res://art/sounds/DogFight.wav" id="8_hn2fy"]
[ext_resource type="AudioStream" uid="uid://5v2033xebcy3" path="res://art/sounds/Roll 7d6.wav" id="9_dlgw4"]
[ext_resource type="Script" path="res://scenes/DiceRollingEffect.gd" id="10_f8hcp"]

[node name="Game" type="Node2D"]
script = ExtResource("1_b061w")

[node name="HUD" type="CanvasLayer" parent="."]

[node name="ScorePanel" type="Panel" parent="HUD"]
offset_left = 24.0
offset_top = 24.0
offset_right = 224.0
offset_bottom = 288.0

[node name="ScoreLabel" type="Label" parent="HUD/ScorePanel"]
layout_mode = 0
offset_left = 8.0
offset_top = 8.0
offset_right = 106.0
offset_bottom = 43.0
theme = ExtResource("2_ik13t")
text = "Score
"

[node name="ScoreCount" type="Label" parent="HUD/ScorePanel"]
layout_mode = 0
offset_left = 112.0
offset_top = 8.0
offset_right = 192.0
offset_bottom = 43.0
theme = ExtResource("2_ik13t")
text = "0
"

[node name="CommonLabel" type="Sprite2D" parent="HUD/ScorePanel"]
position = Vector2(72, 72)
scale = Vector2(0.4, 0.4)
texture = ExtResource("3_5ke58")

[node name="CommonCount" type="Label" parent="HUD/ScorePanel"]
layout_mode = 0
offset_left = 112.0
offset_top = 56.0
offset_right = 192.0
offset_bottom = 91.0
theme = ExtResource("2_ik13t")
text = "0"
vertical_alignment = 1

[node name="UncommonLabel" type="Sprite2D" parent="HUD/ScorePanel"]
position = Vector2(73.6, 121.6)
scale = Vector2(0.4, 0.4)
texture = ExtResource("4_ej5ge")

[node name="UncommonCount" type="Label" parent="HUD/ScorePanel"]
layout_mode = 0
offset_left = 112.0
offset_top = 112.0
offset_right = 192.0
offset_bottom = 147.0
theme = ExtResource("2_ik13t")
text = "0"

[node name="RareLabel" type="Sprite2D" parent="HUD/ScorePanel"]
position = Vector2(72, 168)
scale = Vector2(0.4, 0.4)
texture = ExtResource("5_plp7y")

[node name="RareCount" type="Label" parent="HUD/ScorePanel"]
layout_mode = 0
offset_left = 112.0
offset_top = 156.0
offset_right = 196.0
offset_bottom = 191.0
theme = ExtResource("2_ik13t")
text = "0"

[node name="EpicLabel" type="Sprite2D" parent="HUD/ScorePanel"]
position = Vector2(72, 213)
scale = Vector2(0.4, 0.4)
texture = ExtResource("6_4bh6k")

[node name="EpicCounter" type="Label" parent="HUD/ScorePanel"]
layout_mode = 0
offset_left = 112.0
offset_top = 200.0
offset_right = 192.0
offset_bottom = 235.0
theme = ExtResource("2_ik13t")
text = "0"

[node name="LegendaryLabel" type="Sprite2D" parent="HUD/ScorePanel"]
position = Vector2(75, 244)
scale = Vector2(0.4, 0.4)
texture = ExtResource("7_5r0tr")

[node name="LegendaryCounter" type="Label" parent="HUD/ScorePanel"]
layout_mode = 0
offset_left = 112.0
offset_top = 231.0
offset_right = 192.0
offset_bottom = 266.0
theme = ExtResource("2_ik13t")
text = "0"

[node name="GameOverPanel" type="Panel" parent="HUD"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -293.5
offset_top = -98.5
offset_right = 293.5
offset_bottom = 98.5
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="HUD/GameOverPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -279.0
offset_top = -70.0
offset_right = 279.0
offset_bottom = 70.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_ik13t")
text = "GAME OVER!

It appears you cannot pay you debt.
No more gambling for you."
horizontal_alignment = 1
vertical_alignment = 1

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_hn2fy")
volume_db = -12.0
autoplay = true

[node name="DiceRollingEffect" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("9_dlgw4")
script = ExtResource("10_f8hcp")
